Content link color coding

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 <h2>Blog articles and videos</h2>
 <p style="line-height: 1.8;">
 <a href="/blog/nokia-3310.html">Nokia 3310 USB-C and battery modification</a><br />
-<a href="https://www.youtube.com/watch?v=YouUT3JSOw0" target="_blank">[Video] DRO Ku-band LNB test and teardown</a><br />
-<a href="https://www.youtube.com/watch?v=-c7CKlyPw-0" target="_blank">[Video] $4 PLL Ku-band LNB test and teardown</a><br />
-<a href="https://www.youtube.com/watch?v=eDGEGndEQUg" target="_blank">[Video] Connecting a Ku-band LNB to an SDR</a><br />
-<a href="https://www.youtube.com/watch?v=PKCbgzmyRy8" target="_blank">[Video] How a dish antenna works</a><br />
-<a href="https://www.youtube.com/watch?v=FCzozVMxCFs" target="_blank">[Video] The V-dipole antenna</a><br />
+<a class="red" href="https://www.youtube.com/watch?v=YouUT3JSOw0" target="_blank">DRO Ku-band LNB test and teardown</a><br />
+<a class="red" href="https://www.youtube.com/watch?v=-c7CKlyPw-0" target="_blank">$4 PLL Ku-band LNB test and teardown</a><br />
+<a class="red" href="https://www.youtube.com/watch?v=eDGEGndEQUg" target="_blank">Connecting a Ku-band LNB to an SDR</a><br />
+<a class="red" href="https://www.youtube.com/watch?v=PKCbgzmyRy8" target="_blank">How a dish antenna works</a><br />
+<a class="red" href="https://www.youtube.com/watch?v=FCzozVMxCFs" target="_blank">The V-dipole antenna</a><br />
 <a href="/blog/noaa-21-briefing.html">All you need to know about the upcoming NOAA-21 satellite</a><br />
 <a href="/blog/artemis-1.html">Artemis I mission radio frequency allocations</a><br />
-<a href="https://www.youtube.com/watch?v=A8fhEi3FuA4" target="_blank">[Video] How to decode and understand NOAA APT</a><br />
+<a class="red" href="https://www.youtube.com/watch?v=A8fhEi3FuA4" target="_blank">How to decode and understand NOAA APT</a><br />
 <a href="/blog/CGMS50.html">CGMS 50 weather satellite status summary</a><br />
 <a href="/blog/kgstv-reception.html">How to receive and decode KG-STV image transmissions</a><br />
 <a href="/blog/beginner-hrpt-guide.html">Beginner's guide to HRPT reception</a><br />
