Link and SMS images

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 <h2>Blog articles and videos</h2>
 <p style="line-height: 1.8;">
+<a class="red" href="https://youtu.be/d7Gd4N1rVOg" target="_blank">Transmitting an important message into space</a><br />
 <a class="red" href="https://www.youtube.com/watch?v=hGDKIBBlT2M" target="_blank">Rescuing a crashed weather balloon</a><br />
 <a href="/blog/nokia-3310.html">Nokia 3310 USB-C and battery modification</a><br />
 <a class="red" href="https://www.youtube.com/watch?v=YouUT3JSOw0" target="_blank">DRO Ku-band LNB test and teardown</a><br />
