Add satfreq link

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 <p style="line-height: 1.8;">
 <a href="/tools/helix-calc.html">Helical antenna calculator</a><br />
+<a href="/satfreq/" target="_blank">Satellite frequency list</a><br />
 </p>
 
 <hr class="solid">
