--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <h1>sgcderek</h1>
 
 <p>Welcome to my site. Here you will find a random assortment of information and topics related to amateur radio, with a heavy focus on amateur satellite reception. To see more of my content or to contact me, check out my social media links below;</p>
-<p><a href="https://mas.to/@dereksgc" target="_blank">Mastodon</a> - <a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a> - <a href="https://twitter.com/dereksgc" target="_blank">Twitter</a> - <a href="/blog/nokia-3310.html#number">SMS?</a></p>
-<p>Special thanks to;</p>
-<p><span style="color: #00994d;">microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - Carl Reinemann - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente - LudaN</span></p>
+<p><a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a> - <a href="https://twitter.com/dereksgc" target="_blank">Twitter</a> - <a href="/blog/nokia-3310.html#number">SMS?</a></p>
+<p>If you are feeling extra generous you can also support me directly via <a href="https://ko-fi.com/dereksgc" target="_blank">Ko-fi</a>. Special thanks to;</p>
+<p><span style="color: #00994d;">microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - Carl Reinemann - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente - LudaN - 
+    Mikael Falkvidd</span></p>
 
 <hr class="solid">
 
@@ -27,28 +28,35 @@
 
 <hr class="solid">
 
-<h2>Blog articles and videos</h2>
 <p style="line-height: 1.8;">
-<a class="red" href="https://www.youtube.com/watch?v=xp6B3nVEFCI" target="_blank">Building a 2.4 GHz WiFi helical antenna</a><br />
-<a class="red" href="https://www.youtube.com/watch?v=GScffaB56y4" target="_blank">MetOp HRPT with RTL-SDR, and what sample rate does</a><br />
-<a class="red" href="https://www.youtube.com/watch?v=-a9wrFfkLSI" target="_blank">My HRPT setup + Receiving NOAA-18</a><br />
-<a class="red" href="https://www.youtube.com/watch?v=d7Gd4N1rVOg" target="_blank">Transmitting an important message into space</a><br />
-<a class="red" href="https://www.youtube.com/watch?v=hGDKIBBlT2M" target="_blank">Rescuing a crashed weather balloon</a><br />
-<a href="/blog/nokia-3310.html">Nokia 3310 USB-C and battery modification</a><br />
-<a class="red" href="https://www.youtube.com/watch?v=YouUT3JSOw0" target="_blank">DRO Ku-band LNB test and teardown</a><br />
-<a class="red" href="https://www.youtube.com/watch?v=-c7CKlyPw-0" target="_blank">$4 PLL Ku-band LNB test and teardown</a><br />
-<a class="red" href="https://www.youtube.com/watch?v=eDGEGndEQUg" target="_blank">Connecting a Ku-band LNB to an SDR</a><br />
-<a class="red" href="https://www.youtube.com/watch?v=PKCbgzmyRy8" target="_blank">How a dish antenna works</a><br />
-<a class="red" href="https://www.youtube.com/watch?v=FCzozVMxCFs" target="_blank">The V-dipole antenna</a><br />
-<a href="/blog/noaa-21-briefing.html">All you need to know about the upcoming NOAA-21 satellite</a><br />
-<a href="/blog/artemis-1.html">Artemis I mission radio frequency allocations</a><br />
-<a class="red" href="https://www.youtube.com/watch?v=A8fhEi3FuA4" target="_blank">How to decode and understand NOAA APT</a><br />
-<a href="/blog/CGMS50.html">CGMS 50 weather satellite status summary</a><br />
-<a href="/blog/kgstv-reception.html">How to receive and decode KG-STV image transmissions</a><br />
-<a href="/blog/beginner-hrpt-guide.html">Beginner's guide to HRPT reception</a><br />
-<a href="/blog/lnb-high-band-mod.html">Hard-wiring an LNB to use the high band 10.6 GHz oscillator</a><br />
-<a href="/blog/starlink-beacons.html">Receiving Starlink satellite beacons on a budget</a><br />
-<a href="/blog/noaa2-revival.html">NOAA-2 returning from the dead</a></p>
+    <span style="color:#cc4e4e">• Video</span> <span style="color:#7199ea">• Article</span><br />
+    <a href="https://youtu.be/G-xKhYamsL8" target="_blank"><span style="color:#cc4e4e">• </span>How to build a bias-tee for your SDR or TV receiver (and how it works)</a><br />
+    <a href="https://youtu.be/RLRw4yN9iOI" target="_blank"><span style="color:#cc4e4e">• </span>*DIY vs buy* WiFi antenna long range test</a><br />
+    <a href="https://youtu.be/U_pCHTeamn8" target="_blank"><span style="color:#cc4e4e">• </span>Receiving voice transmissions from GPS satellites</a><br />
+    <a href="https://youtu.be/PY7DY7U1aX4" target="_blank"><span style="color:#cc4e4e">• </span>My DIY Bias-T/LNB control box (with teardown)</a><br />
+    <a href="https://youtu.be/jsLWG2PR4w4" target="_blank"><span style="color:#cc4e4e">• </span>Trying to receive QO-100 and Freesat with a 2.5 meter dish</a><br />
+    <a href="https://youtu.be/jsLWG2PR4w4" target="_blank"><span style="color:#cc4e4e">• </span>Trying to receive QO-100 and Freesat with a 2.5 meter dish</a><br />
+    <a href="https://youtu.be/h36gFmREtBA" target="_blank"><span style="color:#cc4e4e">• </span>Receiving images from a US DoD satellite (Coriolis)</a><br />
+    <a href="https://www.youtube.com/watch?v=GScffaB56y4" target="_blank"><span style="color:#cc4e4e">• </span>MetOp HRPT with RTL-SDR, and what sample rate does</a><br />
+    <a href="https://www.youtube.com/watch?v=-a9wrFfkLSI" target="_blank"><span style="color:#cc4e4e">• </span>My HRPT setup + Receiving NOAA-18</a><br />
+    <a href="https://www.youtube.com/watch?v=d7Gd4N1rVOg" target="_blank"><span style="color:#cc4e4e">• </span>Transmitting an important message into space</a><br />
+    <a href="https://www.youtube.com/watch?v=hGDKIBBlT2M" target="_blank"><span style="color:#cc4e4e">• </span>Rescuing a crashed weather balloon</a><br />
+    <a href="/blog/nokia-3310.html">• Nokia 3310 USB-C and battery modification</a><br />
+    <a href="https://www.youtube.com/watch?v=YouUT3JSOw0" target="_blank"><span style="color:#cc4e4e">• </span>DRO Ku-band LNB test and teardown</a><br />
+    <a href="https://www.youtube.com/watch?v=-c7CKlyPw-0" target="_blank"><span style="color:#cc4e4e">• </span>$4 PLL Ku-band LNB test and teardown</a><br />
+    <a href="https://www.youtube.com/watch?v=eDGEGndEQUg" target="_blank"><span style="color:#cc4e4e">• </span>Connecting a Ku-band LNB to an SDR</a><br />
+    <a href="https://www.youtube.com/watch?v=PKCbgzmyRy8" target="_blank"><span style="color:#cc4e4e">• </span>How a dish antenna works</a><br />
+    <a href="https://www.youtube.com/watch?v=FCzozVMxCFs" target="_blank"><span style="color:#cc4e4e">• </span>The V-dipole antenna</a><br />
+    <a href="/blog/noaa-21-briefing.html">• All you need to know about the upcoming NOAA-21 satellite</a><br />
+    <a href="/blog/artemis-1.html">• Artemis I mission radio frequency allocations</a><br />
+    <a href="https://www.youtube.com/watch?v=A8fhEi3FuA4" target="_blank"><span style="color:#cc4e4e">• </span>How to decode and understand NOAA APT</a><br />
+    <a href="/blog/CGMS50.html">• CGMS 50 weather satellite status summary</a><br />
+    <a href="/blog/kgstv-reception.html">• How to receive and decode KG-STV image transmissions</a><br />
+    <a href="/blog/beginner-hrpt-guide.html">• Beginner's guide to HRPT reception</a><br />
+    <a href="/blog/lnb-high-band-mod.html">• Hard-wiring an LNB to use the high band 10.6 GHz oscillator</a><br />
+    <a href="/blog/starlink-beacons.html">• Receiving Starlink satellite beacons on a budget</a><br />
+    <a href="/blog/noaa2-revival.html">• NOAA-2 returning from the dead</a>
+</p>
 
 <script>
     let buffer = "";
