--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 <p>Welcome to my site. Here you will find a random assortment of information and topics related to amateur radio, with a heavy focus on amateur satellite reception. To see more of my content or to contact me, check out my social media links below;</p>
 <p><a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a> - <a href="https://twitter.com/dereksgc" target="_blank">Twitter</a> - <a href="/blog/nokia-3310.html#number">SMS?</a></p>
 <p>If you are feeling extra generous you can also support me directly via <a href="https://ko-fi.com/dereksgc" target="_blank">Ko-fi</a>. Special thanks to;</p>
-<p><span style="color: #00994d;">microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - Carl Reinemann - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente - LudaN - 
-    Mikael Falkvidd</span></p>
+<p><span style="color: #00994d;">microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - Carl Reinemann - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente - LudaN - Mikael Falkvidd - transistorman</span></p>
 
 <hr class="solid">
 
@@ -30,6 +29,7 @@
 
 <p style="line-height: 1.8;">
     <span style="color:#cc4e4e">• Video</span> <span style="color:#7199ea">• Article</span><br />
+    <a href="https://youtu.be/l3OegHpFvwU" target="_blank"><span style="color:#cc4e4e">• </span>Receiving Meteor-M N2-3 LRPT and HRPT</a><br />
     <a href="https://youtu.be/G-xKhYamsL8" target="_blank"><span style="color:#cc4e4e">• </span>How to build a bias-tee for your SDR or TV receiver (and how it works)</a><br />
     <a href="https://youtu.be/RLRw4yN9iOI" target="_blank"><span style="color:#cc4e4e">• </span>*DIY vs buy* WiFi antenna long range test</a><br />
     <a href="https://youtu.be/U_pCHTeamn8" target="_blank"><span style="color:#cc4e4e">• </span>Receiving voice transmissions from GPS satellites</a><br />
