Update supporters and videos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <p>Welcome to my site. Here you will find a random assortment of information and topics related to amateur radio, with a heavy focus on amateur satellite reception. To see more of my content or to contact me, check out my social media links below;</p>
 <p><a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a> - <a href="https://twitter.com/dereksgc" target="_blank">Twitter</a> - <a href="/blog/nokia-3310.html#number">SMS?</a></p>
 <p>If you are feeling extra generous you can also support me directly via <a href="https://ko-fi.com/dereksgc" target="_blank">Ko-fi</a>. Special thanks to;</p>
-<p><span style="color: #00994d;">microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - Carl Reinemann - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente - LudaN - Mikael Falkvidd - transistorman</span></p>
+<p><span style="color: #389900;">brongle</span><span style="color: #00994d;"> - microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - Carl Reinemann - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente - LudaN - Mikael Falkvidd - transistorman</span></p>
 
 <hr class="solid">
 
@@ -29,12 +29,15 @@
 
 <p style="line-height: 1.8;">
     <span style="color:#cc4e4e">• Video</span> <span style="color:#7199ea">• Article</span><br />
+    <a href="https://youtu.be/vdY8pfA8Cd8" target="_blank"><span style="color:#cc4e4e">• </span>Talking about (mostly) satellites for 45 minutes</a><br />
+    <a href="https://youtu.be/X6XxWhjtL2I" target="_blank"><span style="color:#cc4e4e">• </span>DIY portable 137 MHz yagi antenna</a><br />
+    <a href="https://youtu.be/TK6l5YYkZ-A" target="_blank"><span style="color:#cc4e4e">• </span>Intercepting NOAA-19 full orbit satellite image playback (GAC)</a><br />
+    <a href="https://youtu.be/OxdvDNxG2I4" target="_blank"><span style="color:#cc4e4e">• </span>Why does the Eearth always look different</a><br />
     <a href="https://youtu.be/l3OegHpFvwU" target="_blank"><span style="color:#cc4e4e">• </span>Receiving Meteor-M N2-3 LRPT and HRPT</a><br />
     <a href="https://youtu.be/G-xKhYamsL8" target="_blank"><span style="color:#cc4e4e">• </span>How to build a bias-tee for your SDR or TV receiver (and how it works)</a><br />
     <a href="https://youtu.be/RLRw4yN9iOI" target="_blank"><span style="color:#cc4e4e">• </span>*DIY vs buy* WiFi antenna long range test</a><br />
     <a href="https://youtu.be/U_pCHTeamn8" target="_blank"><span style="color:#cc4e4e">• </span>Receiving voice transmissions from GPS satellites</a><br />
     <a href="https://youtu.be/PY7DY7U1aX4" target="_blank"><span style="color:#cc4e4e">• </span>My DIY Bias-T/LNB control box (with teardown)</a><br />
-    <a href="https://youtu.be/jsLWG2PR4w4" target="_blank"><span style="color:#cc4e4e">• </span>Trying to receive QO-100 and Freesat with a 2.5 meter dish</a><br />
     <a href="https://youtu.be/jsLWG2PR4w4" target="_blank"><span style="color:#cc4e4e">• </span>Trying to receive QO-100 and Freesat with a 2.5 meter dish</a><br />
     <a href="https://youtu.be/h36gFmREtBA" target="_blank"><span style="color:#cc4e4e">• </span>Receiving images from a US DoD satellite (Coriolis)</a><br />
     <a href="https://www.youtube.com/watch?v=GScffaB56y4" target="_blank"><span style="color:#cc4e4e">• </span>MetOp HRPT with RTL-SDR, and what sample rate does</a><br />
