--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p><a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a> - <a href="https://twitter.com/dereksgc" target="_blank">Twitter</a> - <a href="/blog/nokia-3310.html#number">SMS?</a></p>
 <p>You can join my Discord server by clicking <a href="https://discord.gg/b375hYqUxh" target="_blank">here</a>.</p>
 <p>If you are feeling extra generous you can also support me directly via <a href="https://ko-fi.com/dereksgc" target="_blank">Ko-fi</a>. Special thanks to;</p>
-<p><span style="color: #389900;">brongle</span><span style="color: #00994d;"> - microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - Carl Reinemann - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente - LudaN - Mikael Falkvidd - transistorman</span></p>
+<p><span style="color: #389900;">brongle</span><span style="color: #00994d;"> - microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - Carl Reinemann - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente - LudaN - Mikael Falkvidd - transistorman - Skunkola - AsciiWolf - Steven Kittelsen - Tecas Science Guy</span></p>
 
 <hr class="solid">
 
