--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <p><a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> - <a href="https://github.com/sgcderek" target="_blank">GitHub</a> - <a href="https://www.thingiverse.com/derekcz/designs" target="_blank">Thingiverse</a> - <a href="https://twitter.com/dereksgc" target="_blank">Twitter</a> - <a href="/blog/nokia-3310.html#number">SMS?</a></p>
 <p>You can join my Discord server by clicking <a href="https://discord.gg/b375hYqUxh" target="_blank">here</a>.</p>
 <p>If you are feeling extra generous you can also support me directly via <a href="https://ko-fi.com/dereksgc" target="_blank">Ko-fi</a>. Special thanks to;</p>
-<p><span style="color: #389900;">brongle</span><span style="color: #00994d;"> - microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - Carl Reinemann - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente - LudaN - Mikael Falkvidd - transistorman - Skunkola - AsciiWolf - Steven Kittelsen - Tecas Science Guy</span></p>
+<p><span style="color: #389900;">brongle</span><span style="color: #00994d;"> - microp11 - thebaldgeek - Xerbo - Whatwhatphysics - yakko warner - BackHive - Carl Reinemann - hmdsamarasekara - Nautiluscl - Martin HB9FXX - KentuckyFriedData - Pablo de la Fuente - LudaN - Mikael Falkvidd - transistorman - Skunkola - AsciiWolf - Steven Kittelsen - Tecas Science Guy - R1chä - Damian Nowak</span></p>
 
 <hr class="solid">
 
@@ -30,10 +30,13 @@
 
 <p style="line-height: 1.8;">
     <span style="color:#cc4e4e">• Video</span> <span style="color:#7199ea">• Article</span><br />
+    <a href="https://youtu.be/IoMX3Ob42vQ" target="_blank"><span style="color:#cc4e4e">• </span>My most successful failure (X-band LNB build)</a><br />
+    <a href="https://youtu.be/g7sh78OopKE" target="_blank"><span style="color:#cc4e4e">• </span>Introduction to GEO weather sat image reception</a><br />
+    <a href="https://youtu.be/Kx9Z5GUixCs" target="_blank"><span style="color:#cc4e4e">• </span>Receiving 2.2 GHz with the RTL-SDR and Nooelec Ham It Down</a><br />
     <a href="https://youtu.be/vdY8pfA8Cd8" target="_blank"><span style="color:#cc4e4e">• </span>Talking about (mostly) satellites for 45 minutes</a><br />
     <a href="https://youtu.be/X6XxWhjtL2I" target="_blank"><span style="color:#cc4e4e">• </span>DIY portable 137 MHz yagi antenna</a><br />
     <a href="https://youtu.be/TK6l5YYkZ-A" target="_blank"><span style="color:#cc4e4e">• </span>Intercepting NOAA-19 full orbit satellite image playback (GAC)</a><br />
-    <a href="https://youtu.be/OxdvDNxG2I4" target="_blank"><span style="color:#cc4e4e">• </span>Why does the Eearth always look different</a><br />
+    <a href="https://youtu.be/OxdvDNxG2I4" target="_blank"><span style="color:#cc4e4e">• </span>Why does the Earth always look different</a><br />
     <a href="https://youtu.be/l3OegHpFvwU" target="_blank"><span style="color:#cc4e4e">• </span>Receiving Meteor-M N2-3 LRPT and HRPT</a><br />
     <a href="https://youtu.be/G-xKhYamsL8" target="_blank"><span style="color:#cc4e4e">• </span>How to build a bias-tee for your SDR or TV receiver (and how it works)</a><br />
     <a href="https://youtu.be/RLRw4yN9iOI" target="_blank"><span style="color:#cc4e4e">• </span>*DIY vs buy* WiFi antenna long range test</a><br />
