--- a/index.html
+++ b/index.html
@@ -29,40 +29,16 @@
 <hr class="solid">
 
 <p style="line-height: 1.8;">
-    <span style="color:#cc4e4e">• Video</span> <span style="color:#7199ea">• Article</span><br />
-    <a href="https://youtu.be/IoMX3Ob42vQ" target="_blank"><span style="color:#cc4e4e">• </span>My most successful failure (X-band LNB build)</a><br />
-    <a href="https://youtu.be/g7sh78OopKE" target="_blank"><span style="color:#cc4e4e">• </span>Introduction to GEO weather sat image reception</a><br />
-    <a href="https://youtu.be/Kx9Z5GUixCs" target="_blank"><span style="color:#cc4e4e">• </span>Receiving 2.2 GHz with the RTL-SDR and Nooelec Ham It Down</a><br />
-    <a href="https://youtu.be/vdY8pfA8Cd8" target="_blank"><span style="color:#cc4e4e">• </span>Talking about (mostly) satellites for 45 minutes</a><br />
-    <a href="https://youtu.be/X6XxWhjtL2I" target="_blank"><span style="color:#cc4e4e">• </span>DIY portable 137 MHz yagi antenna</a><br />
-    <a href="https://youtu.be/TK6l5YYkZ-A" target="_blank"><span style="color:#cc4e4e">• </span>Intercepting NOAA-19 full orbit satellite image playback (GAC)</a><br />
-    <a href="https://youtu.be/OxdvDNxG2I4" target="_blank"><span style="color:#cc4e4e">• </span>Why does the Earth always look different</a><br />
-    <a href="https://youtu.be/l3OegHpFvwU" target="_blank"><span style="color:#cc4e4e">• </span>Receiving Meteor-M N2-3 LRPT and HRPT</a><br />
-    <a href="https://youtu.be/G-xKhYamsL8" target="_blank"><span style="color:#cc4e4e">• </span>How to build a bias-tee for your SDR or TV receiver (and how it works)</a><br />
-    <a href="https://youtu.be/RLRw4yN9iOI" target="_blank"><span style="color:#cc4e4e">• </span>*DIY vs buy* WiFi antenna long range test</a><br />
-    <a href="https://youtu.be/U_pCHTeamn8" target="_blank"><span style="color:#cc4e4e">• </span>Receiving voice transmissions from GPS satellites</a><br />
-    <a href="https://youtu.be/PY7DY7U1aX4" target="_blank"><span style="color:#cc4e4e">• </span>My DIY Bias-T/LNB control box (with teardown)</a><br />
-    <a href="https://youtu.be/jsLWG2PR4w4" target="_blank"><span style="color:#cc4e4e">• </span>Trying to receive QO-100 and Freesat with a 2.5 meter dish</a><br />
-    <a href="https://youtu.be/h36gFmREtBA" target="_blank"><span style="color:#cc4e4e">• </span>Receiving images from a US DoD satellite (Coriolis)</a><br />
-    <a href="https://www.youtube.com/watch?v=GScffaB56y4" target="_blank"><span style="color:#cc4e4e">• </span>MetOp HRPT with RTL-SDR, and what sample rate does</a><br />
-    <a href="https://www.youtube.com/watch?v=-a9wrFfkLSI" target="_blank"><span style="color:#cc4e4e">• </span>My HRPT setup + Receiving NOAA-18</a><br />
-    <a href="https://www.youtube.com/watch?v=d7Gd4N1rVOg" target="_blank"><span style="color:#cc4e4e">• </span>Transmitting an important message into space</a><br />
-    <a href="https://www.youtube.com/watch?v=hGDKIBBlT2M" target="_blank"><span style="color:#cc4e4e">• </span>Rescuing a crashed weather balloon</a><br />
-    <a href="/blog/nokia-3310.html">• Nokia 3310 USB-C and battery modification</a><br />
-    <a href="https://www.youtube.com/watch?v=YouUT3JSOw0" target="_blank"><span style="color:#cc4e4e">• </span>DRO Ku-band LNB test and teardown</a><br />
-    <a href="https://www.youtube.com/watch?v=-c7CKlyPw-0" target="_blank"><span style="color:#cc4e4e">• </span>$4 PLL Ku-band LNB test and teardown</a><br />
-    <a href="https://www.youtube.com/watch?v=eDGEGndEQUg" target="_blank"><span style="color:#cc4e4e">• </span>Connecting a Ku-band LNB to an SDR</a><br />
-    <a href="https://www.youtube.com/watch?v=PKCbgzmyRy8" target="_blank"><span style="color:#cc4e4e">• </span>How a dish antenna works</a><br />
-    <a href="https://www.youtube.com/watch?v=FCzozVMxCFs" target="_blank"><span style="color:#cc4e4e">• </span>The V-dipole antenna</a><br />
-    <a href="/blog/noaa-21-briefing.html">• All you need to know about the upcoming NOAA-21 satellite</a><br />
-    <a href="/blog/artemis-1.html">• Artemis I mission radio frequency allocations</a><br />
-    <a href="https://www.youtube.com/watch?v=A8fhEi3FuA4" target="_blank"><span style="color:#cc4e4e">• </span>How to decode and understand NOAA APT</a><br />
-    <a href="/blog/CGMS50.html">• CGMS 50 weather satellite status summary</a><br />
-    <a href="/blog/kgstv-reception.html">• How to receive and decode KG-STV image transmissions</a><br />
-    <a href="/blog/beginner-hrpt-guide.html">• Beginner's guide to HRPT reception</a><br />
-    <a href="/blog/lnb-high-band-mod.html">• Hard-wiring an LNB to use the high band 10.6 GHz oscillator</a><br />
-    <a href="/blog/starlink-beacons.html">• Receiving Starlink satellite beacons on a budget</a><br />
-    <a href="/blog/noaa2-revival.html">• NOAA-2 returning from the dead</a>
+	<a></a>See much more content on my <a href="https://www.youtube.com/channel/UCSHVnVnUErLxEU1mfWM3EBw" target="_blank">YouTube</a> channel<br />
+    <a href="/blog/nokia-3310.html">Nokia 3310 USB-C and battery modification</a><br />
+    <a href="/blog/noaa-21-briefing.html">All you need to know about the upcoming NOAA-21 satellite</a><br />
+    <a href="/blog/artemis-1.html">Artemis I mission radio frequency allocations</a><br />
+    <a href="/blog/CGMS50.html">CGMS 50 weather satellite status summary</a><br />
+    <a href="/blog/kgstv-reception.html">How to receive and decode KG-STV image transmissions</a><br />
+    <a href="/blog/beginner-hrpt-guide.html">Beginner's guide to HRPT reception</a><br />
+    <a href="/blog/lnb-high-band-mod.html">Hard-wiring an LNB to use the high band 10.6 GHz oscillator</a><br />
+    <a href="/blog/starlink-beacons.html">Receiving Starlink satellite beacons on a budget</a><br />
+    <a href="/blog/noaa2-revival.html">NOAA-2 returning from the dead</a>
 </p>
 
 <script>
