--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <p style="line-height: 1.8;">
 <a href="/tools/helix-calc.html">Helical antenna calculator</a><br />
 <a href="/satfreq/" target="_blank">Satellite frequency list</a><br />
+<a href="/tools/screenres.html" target="_blank">Device screen information</a><br />
 </p>
 
 <hr class="solid">
